components/WriteBox.module.scss
.boxWrapper {
  display: flex;
  flex-direction: column;
  gap: 4px;
  width: 40vw;
}

.linesWrapper {
  position: fixed;
  bottom: 55%;
  left: 50%;
  transform: translateX(-50%);
  width: 40vw;
  display: flex;
  flex-direction: column;
  gap: 4px;
}

.completedLine {
  font-size: 1rem;
  line-height: 1.5;
  text-align: center;
}

.textArea {
  position: fixed;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  width: 40vw;
  outline: none;
  border: 1px solid rgb(202, 202, 202);
  border-radius: 5px;
  padding: 1em;
  height: 2em;
  line-height: 2em;
  white-space: nowrap;
  overflow: hidden;
  display: flex;
  align-items: center;

  &:empty::before {
    content: attr(data-placeholder);
    color: #aaa;
  }
}

